fix icon spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -137,7 +137,7 @@ h1 {
   float: left;
   height: $icon-size;
   width: $icon-size;
-  margin: -15px 0px 12px 10px;
+  margin: -15px 0px 12px 5px;
 }
 .icon-wrapper-right {
   position: relative;
